# objl

./: CHANGELOG  CMakeLists.txt  INSTALL  LICENSE  TODO  dist.info  install.sh
doc/: README  actor.txt  api.txt  slicing.txt
examples/: robinhood.lua
lib/lua/: ObjL.lua  objl_base.lua  objl_comm.lua  objl_obj.lua
share/objl/: AUTHORS  README  THANKS
share/objl/doc/: capi_helpers.txt  objects.txt  objl_c_interface.txt
share/objl/etc/: autogen_docs.lua  autogen_loader.lua
share/objl/test/: arraytest.lua  objecttest.lua
src/: ObjL  ObjL.cpp  build.sh  clean.sh  objl_misc.h
tools/: makedist.sh
